--- a/style.css
+++ b/style.css
@@ -333,6 +333,9 @@ fa-angle-right{
 
 .footer{
 	margin: 50px;
+	margin-left: 1px;
+	margin-right: 1px;
+	margin-bottom: 0;
 	background: #d9d9d9;
 	color: black;
 }
